# simd-demo

./: Makefile.am  configure.ac
src/: simd-disabled.cpp  vector.hpp
